# End-to-end-DevOps-pipeline

./: .dockerignore  .env.example  .gitignore  Dockerfile  Jenkinsfile  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  sonar-project.properties
.github/workflows/: ci-cd.yml
app/: main.py
app/api/: routes.py
infra/terraform/aws-k3s/: README.md  main.tf  outputs.tf  user_data.sh.tftpl  variables.tf
k8s/: 00-namespace.yaml  10-deployment.yaml  20-service.yaml  30-servicemonitor.yaml  deployment.yaml  service.yaml  servicemonitor.yaml
monitoring/: README.md  kube-prometheus-stack-values.yaml
scripts/: git-setup.ps1  git-setup.sh  kubeconfig-jenkins.ps1  run-all.ps1  run-all.sh
tests/: test_api.py
tools/jenkins/: Dockerfile  README.md  docker-compose.yml  plugins.txt
tools/sonarqube/: docker-compose.yml
